fix: show burger only on mobile device

--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin mobile() {
-  @media (width <= 767px) {
+  @media (width <= 768px) {
     @content;
   }
 }
