--- a/src/styles/sections/_header.scss
+++ b/src/styles/sections/_header.scss
@@ -59,7 +59,7 @@
   &__burger {
     display: none;
 
-    @include tablet() {
+    @include mobile() {
       display: block;
     }
   }
@@ -69,7 +69,7 @@
     gap: 8px;
     align-items: center;
 
-    @include tablet() {
+    @include mobile() {
       display: none;
     }
   }
